[gd_scene load_steps=3 format=3 uid="uid://bg1yqxarvf1vb"]

[ext_resource type="Script" path="res://Levels/SceneTransition/SceneTransition.gd" id="1_humuo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iiucd"]
size = Vector2(100, 100)

[node name="SceneTransition" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_humuo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_iiucd")

[node name="SceneChangeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SceneChangeTimer" to="." method="_on_scene_change_timer_timeout"]
